--- a/tetrecs/pom.xml
+++ b/tetrecs/pom.xml
@@ -136,6 +136,19 @@
                     <mainClass>uk.ac.soton.comp1206/uk.ac.soton.comp1206.App</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <!-- Build an executable JAR -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.2</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>uk.ac.soton.comp1206.Launcher</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
